feat: validate user above 16
