# server/internal/transport/http/user.go
@@ -254,7 +254,7 @@ func userPostToDomain(userPost api.UserPost) (domain.EditableUserWithPassword, e
 			Username:            domain.Username(userPost.Username),
 			Email:               domain.Email(userPost.Email),
 			DisplayName:         domain.Name(userPost.DisplayName),
-			DateOfBirth:         userPost.DateOfBirth.Time,
+			DateOfBirth:         domain.UserDateOfBirth(userPost.DateOfBirth.Time),
 			Address:             domain.Address(userPost.Address),
 			Country:             country,
 			Vatin:               domain.Vatin(userPost.Vatin),
@@ -281,7 +281,7 @@ func userPatchToDomain(userPatch api.UserPatch) (domain.EditableUserPatch, error
 		Username:            (*domain.Username)(userPatch.Username),
 		Email:               (*domain.Email)(userPatch.Email),
 		DisplayName:         (*domain.Name)(userPatch.DisplayName),
-		DateOfBirth:         optionalDateToOptionalTime(userPatch.DateOfBirth),
+		DateOfBirth:         (*domain.UserDateOfBirth)(optionalDateToOptionalTime(userPatch.DateOfBirth)),
 		Address:             (*domain.Address)(userPatch.Address),
 		Country:             country,
 		Vatin:               (*domain.Vatin)(userPatch.Vatin),
@@ -297,7 +297,7 @@ func userFromDomain(user domain.User) api.User {
 		Username:          string(user.Username),
 		Email:             string(user.Email),
 		DisplayName:       string(user.DisplayName),
-		DateOfBirth:       dateFromTime(user.DateOfBirth),
+		DateOfBirth:       dateFromTime(user.DateOfBirth.Time()),
 		Address:           string(user.Address),
 		Country:           user.Country.String(),
 		Vatin:             string(user.Vatin),
